--- a/style.css
+++ b/style.css
@@ -2,8 +2,14 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-display: auto;
 }
 
+@font-face {
+  font-family: "Arvo-auto";
+  font-display: auto;
+  src: local("Arvo"), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+}
 .primary-nav {
   margin: 0;
   padding: 10px 0;
