--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
   cursor: pointer;
   margin-right: 40px;
 }
+.primary-nav .list.active {
+  color: green;
+}
 
 .news-thumbnail {
   width: 100%;
