--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,11 @@ body{
         cursor: pointer;
         margin-right: 40px;
     }
+    .list{
+        &.active{
+            color: green;
+        }
+    }
 
 }
 
