--- a/style.css
+++ b/style.css
@@ -26,6 +26,41 @@ body {
   color: green;
 }
 
+.active-title {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  vertical-align: middle;
+  padding: 15px;
+  background-color: white;
+  z-index: 1;
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  box-shadow: 0 -3px 5px 2px rgba(0, 0, 0, 0.4);
+}
+
+.active-tab {
+  display: inline-block;
+}
+.active-tab > i {
+  margin-right: 5px;
+}
+
+.news-search {
+  display: inline-block;
+  float: right;
+}
+.news-search input {
+  margin-top: 2px;
+  width: 150px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #d6d4d4;
+  background: white url("search.svg") left center no-repeat;
+  padding-left: 30px;
+}
 .news-thumbnail {
   width: 100%;
   height: 100%;
