--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,42 @@ body{
     }
 
 }
-
+.active-title{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    vertical-align: middle;
+    padding: 15px;
+    background-color: white;
+    z-index: 1;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    box-shadow: 0 -3px 5px 2px rgba(0, 0, 0, 0.4);
+}
+.active-tab{
+    display: inline-block;
+    >i{
+        margin-right: 5px;
+    }
+}
+.news-search{
+    display: inline-block;
+    float: right;
+    input{
+        margin-top: 2px;
+        width: 150px;
+        border: none;
+        outline: none;
+        border-bottom: 1px solid #d6d4d4;
+        background: white url('search.svg') left center no-repeat;
+        padding-left: 30px;
+        &:focus{
+            
+        }
+    }
+}
 .news{
     &-thumbnail{
         width: 100%;
